# hdpy

./: .gitignore  01_intro.qmd  02_graphics.qmd  03_verbs.qmd  04_combine.qmd  05_collect.qmd  06_textual_data.qmd  07_network_data.qmd  08_temporal_data.qmd  09_spatial_data.qmd  10_image_data.qmd  11_audio_data.qmd  11_inference.qmd  12_movingimage_data.qmd  12_supervised.qmd  13_inference.qmd  13_unsupervised.qmd  14_deeplearning.qmd  14_supervised.qmd  15_transformers.qmd  15_unsupervised.qmd  16_deeplearning.qmd  16_program.qmd  17_jsonxml.qmd  17_transformers.qmd  18_databases.qmd  18_program.qmd  19_jsonxml.qmd  20_databases.qmd  README.md  _quarto.yml  class_notes.md  custom.scss  index.qmd  pyproject.toml  refs.bib
data/: fsac_metadata.csv.bz2  fsac_nn_face.csv.bz2  fsac_nn_kpnt.csv.bz2
docs/: 01_intro.html  02_graphics.html  03_verbs.html  04_combine.html  05_collect.html  06_textual_data.html  07_network_data.html  08_temporal_data.html  09_spatial_data.html  10_image_data.html  11_audio_data.html  11_inference.html  12_movingimage_data.html  12_supervised.html  13_inference.html  13_unsupervised.html  14_deeplearning.html  14_supervised.html  15_transformers.html  15_unsupervised.html  16_deeplearning.html  16_program.html  17_jsonxml.html  17_transformers.html  18_databases.html  18_program.html  19_jsonxml.html  20_databases.html  index.html  robots.txt  search.json  sitemap.xml
notebooks/: _quarto.yml  notebook01a.qmd  notebook07a.qmd
notebooks/nb/: notebook01a.ipynb  notebook01b.ipynb  notebook07a.ipynb
(+1 files in other folders)
