[project]
name = "book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "bs4>=0.0.2",
    "contextily>=1.6.2",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "igraph>=0.11.9",
    "jupyter>=1.1.1",
    "lxml>=6.0.0",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "plotnine>=0.15.0",
    "pyproj>=3.7.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "spacy>=3.8.7",
]
